# zilina-eirvah-edge-impl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
config/: opcua-address-space.yaml  opcua-node-list.yaml
deploy/grafana/dashboards/: eirvah-edge-pipeline.json
deploy/k3s/base/: kustomization.yaml  namespace.yaml
deploy/k3s/base/actuation-control-orchestrator/: actuation-control.yaml  deployment.yaml  kustomization.yaml  service.yaml
deploy/k3s/base/actuation-event-validator/: actuation-policy.yaml  deployment.yaml  kustomization.yaml  service.yaml
deploy/k3s/base/actuation-signal-publisher/: deployment.yaml  kustomization.yaml  opcua-node-to-uns-mapping.yaml  service.yaml
deploy/k3s/base/amqp-actuation-event-subscriber/: deployment.yaml  service.yaml
deploy/k3s/base/data-converter/: conversion-rules.yaml  deployment.yaml  kustomization.yaml  service.yaml
deploy/k3s/base/decision-agent-stub/: deployment.yaml  service.yaml
deploy/k3s/base/grafana/: bottling-line-state.json  configmap-dashboards-provisioning.yaml  configmap-datasources.yaml  deployment.yaml  eirvah-edge-pipeline.json  kustomization.yaml  secret.yaml  service.yaml
deploy/k3s/base/mosquitto/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
deploy/k3s/base/mqtt-uns-publisher/: deployment.yaml  service.yaml
deploy/k3s/base/nats/: deployment.yaml  service.yaml
deploy/k3s/base/opcua-data-subscriber/: deployment.yaml  kustomization.yaml  opcua-node-list.yaml  service.yaml
deploy/k3s/base/opcua-simulator/: configmap.yaml  deployment.yaml  kustomization.yaml  opcua-address-space.yaml  (+1 more)
docs/adr/: 0001-actuation-safety-gate.md  0002-reverse-mapping-shared-configmap.md
docs/superpowers/plans/: 2026-05-16-plan-1-foundations.md  2026-05-18-plan-2-telemetry-path.md  2026-05-18-plan-3-actuation-path.md
docs/superpowers/specs/: 2026-05-16-eirvah-edge-vertical-slice-design.md  2026-05-18-plan-3-actuation-path-design.md
libs/eirvah-bus/: pyproject.toml
libs/eirvah-bus/src/eirvah_bus/: __init__.py  client.py  consumer.py  request_reply.py
libs/eirvah-bus/tests/: test_client.py  test_consumer.py  test_request_reply.py
libs/eirvah-contracts/: pyproject.toml
libs/eirvah-contracts/src/eirvah_contracts/: __init__.py  actuation.py  envelope.py  pipeline.py  signals.py  telemetry.py  ulid.py  uns.py
libs/eirvah-contracts/tests/: test_actuation.py  test_envelope.py  test_pipeline.py  test_signals.py  test_telemetry.py  test_ulid.py  test_uns.py
libs/eirvah-contracts/tests/golden/: actuation_approve_v1_0_sample.json  actuation_reject_v1_0_sample.json  actuation_request_v1_0_sample.json  telemetry_v1_0_sample.json
libs/eirvah-observability/: pyproject.toml
libs/eirvah-observability/src/eirvah_observability/: __init__.py  health.py  logging.py  metrics.py
libs/eirvah-observability/tests/: test_health.py  test_logging.py  test_metrics.py
scripts/: build_all.sh  dev_down.sh  dev_up.sh  trace.sh
services/actuation-control-orchestrator/: Dockerfile  pyproject.toml
services/actuation-control-orchestrator/src/actuation_control_orchestrator/: __main__.py  config.py  metrics.py  models.py  pipeline.py  service.py
services/actuation-control-orchestrator/tests/: test_actuation_control_orchestrator.py
services/actuation-event-validator/: Dockerfile  pyproject.toml
services/actuation-event-validator/src/actuation_event_validator/: __main__.py  config.py  service.py
services/actuation-event-validator/tests/: test_actuation_event_validator.py
services/actuation-signal-publisher/: Dockerfile  pyproject.toml
services/actuation-signal-publisher/src/actuation_signal_publisher/: __main__.py  config.py  service.py
services/actuation-signal-publisher/tests/: test_actuation_signal_publisher.py
services/amqp-actuation-event-subscriber/: Dockerfile  pyproject.toml
services/amqp-actuation-event-subscriber/src/amqp_actuation_event_subscriber/: __main__.py  config.py  service.py
services/amqp-actuation-event-subscriber/tests/: test_amqp_actuation_event_subscriber.py
services/data-converter/: Dockerfile  pyproject.toml
services/data-converter/src/data_converter/: __main__.py  config.py  service.py
services/data-converter/tests/: test_data_converter.py
services/decision-agent-stub/: Dockerfile  pyproject.toml
services/decision-agent-stub/src/decision_agent_stub/: __main__.py  config.py  service.py
services/decision-agent-stub/tests/: test_decision_agent_stub.py
services/mqtt-uns-publisher/: Dockerfile  pyproject.toml
services/mqtt-uns-publisher/src/mqtt_uns_publisher/: __main__.py  config.py  service.py
services/mqtt-uns-publisher/tests/: test_mqtt_uns_publisher.py
services/opcua-data-subscriber/: Dockerfile  pyproject.toml
services/opcua-data-subscriber/src/opcua_data_subscriber/: __main__.py  config.py  service.py
services/opcua-data-subscriber/tests/: test_opcua_data_subscriber.py
services/opcua-simulator/: Dockerfile  pyproject.toml
services/opcua-simulator/src/opcua_simulator/: __init__.py  __main__.py  address_space.py  config.py  hot_spike.py  metrics.py  motor.py  quality.py  rng.py  server.py  setpoint.py  temperature.py  throughput.py
services/opcua-simulator/tests/: test_address_space.py  test_config.py  test_hot_spike.py  test_motor.py  test_quality.py  test_rng.py  test_server_smoke.py  test_setpoint.py  test_simulator_metrics.py  test_temperature.py  test_throughput.py
services/uns-auto-contextualizer/: Dockerfile  pyproject.toml
services/uns-auto-contextualizer/src/uns_auto_contextualizer/: __main__.py  config.py  service.py
services/uns-auto-contextualizer/tests/: test_uns_auto_contextualizer.py
services/uns-contextualizer-orchestrator/: Dockerfile  pyproject.toml
services/uns-contextualizer-orchestrator/src/uns_contextualizer_orchestrator/: __main__.py  config.py  metrics.py  models.py  pipeline.py  service.py
services/uns-contextualizer-orchestrator/tests/: test_uns_contextualizer_orchestrator.py
tests/e2e/: conftest.py  test_actuation.py  test_telemetry.py
(+14 files in other folders)
