[project]
name = "eirvah-edge"
version = "0.0.0"
description = "EirVah edge layer — workspace root for contracts, bus, observability, and the OPC UA simulator."
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "EirVah Project" },
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "libs/*",
    "services/*",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
