[project]
name = "eirvah-edge-code"
version = "0.0.0"
description = "EirVah Edge Integration Layer — vertical slice"
requires-python = ">=3.12"
authors = [{ name = "William Francis Stack" }]
license = { text = "Apache-2.0" }

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "libs/eirvah-contracts",
    "libs/eirvah-bus",
    "libs/eirvah-observability",
    "services/opcua-simulator",
]

[tool.uv.sources]
eirvah-contracts     = { workspace = true }
eirvah-bus           = { workspace = true }
eirvah-observability = { workspace = true }

[dependency-groups]
dev = [
    # workspace libs — listed here so `uv sync` installs them as editable packages
    "eirvah-contracts",
    "eirvah-bus",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]
