[project]
name = "eirvah-contracts"
version = "0.0.0"
description = "Wire-schema models, UNS topic helpers, NATS envelopes."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.8",
    "python-ulid>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eirvah_contracts"]
