[project]
name = "eirvah-observability"
version = "0.0.0"
description = "Prometheus, structured logging, and /healthz /readyz /metrics ASGI helpers."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "prometheus-client>=0.20",
    "structlog>=24.4",
    "starlette>=0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eirvah_observability"]
