[project]
name = "actuation-control-orchestrator"
version = "0.0.0"
description = "Actuation pipeline orchestrator — owns validate/write sequencing (spec §3.2)."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "aio-pika>=9.0",
    "nats-py>=2.7",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "uvicorn>=0.30",
    "eirvah-contracts",
    "eirvah-bus",
    "eirvah-observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actuation_control_orchestrator"]
