[project]
name = "decision-agent-stub"
version = "0.0.0"
description = "Closes CPS loop: subscribes MQTT temperature, emits AMQP actuation request (spec §3.3)."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "aio-pika>=9.0",
    "aiomqtt>=2.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "structlog>=24.0",
    "python-ulid>=2.0",
    "eirvah-contracts",
    "eirvah-observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_agent_stub"]
