[project]
name = "opcua-simulator"
version = "0.0.0"
description = "EirVah bottling-line OPC UA simulator (spec §9)."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "asyncua>=1.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
    "eirvah-contracts",
    "eirvah-observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opcua_simulator"]
